feat: updating question 3

--- a/exam/question2.ipynb
+++ b/exam/question2.ipynb
@@ -166,41 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def glushkov_construction(re_string):\n",
-    "    \"\"\"\n",
-    "    Generates a Glushkov NFA for the given regular expression.\n",
-    "    \"\"\"\n",
-    "    dot = Digraph(format='png')\n",
-    "    dot.attr(rankdir='LR')  # Left-to-right visualization\n",
-    "\n",
-    "    # Assign unique positions to each symbol in the regular expression\n",
-    "    positions = {m.start(): m.group() for m in re.finditer(r'[a-zA-Z]', re_string)}\n",
-    "    start_state = 'q0'\n",
-    "    dot.node(start_state, start_state, shape='circle', color='red')  # Start state\n",
-    "\n",
-    "    # Add transitions based on the sequence of symbols\n",
-    "    prev_state = start_state\n",
-    "    for pos, char in positions.items():\n",
-    "        next_state = f'q{pos + 1}'\n",
-    "        dot.node(next_state, next_state, shape='circle')\n",
-    "        dot.edge(prev_state, next_state, label=char)\n",
-    "        prev_state = next_state\n",
-    "\n",
-    "    # Add a final state\n",
-    "    final_state = f'q{len(positions) + 1}'\n",
-    "    dot.node(final_state, final_state, shape='doublecircle', color='green')  # Final state\n",
-    "    dot.edge(prev_state, final_state, label='ε')  # Transition to final state\n",
-    "\n",
-    "    return dot\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,37 +180,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generated sequences for Regex 1:\n",
-      "['aaabaaaaabaabaaaaaaa', 'aaaaaababaabaaaaaa', 'abaaaaabababaaaaaaaababaaba', 'ababaaaabaabaaaaaaabaabaaa', 'aaaababaabaaaabaabababaaaaabaaaabaabaaaaa']\n",
-      "Generated sequences for Regex 2:\n",
-      "['abcbaccccbbababaccbbaabcbacccccbba', 'abbacccbbaabcbacccaabbacccaababacccccbbabab', 'abbaccccccbbabc', 'ababacccccbbabab', 'abbaccccbbaabbaccccaabbaccccaabcbaccccaababa']\n",
-      "Random file 'random_sequences.txt' created with injected sequences.\n",
-      "\n",
-      "Matches for Regex 1: 2\n",
-      "Matches for Regex 2: 0\n",
-      "\n",
-      "Examples of matches for Regex 1:\n",
-      "['aaabaaaaabaabaaaaaaa', 'abaaaaabababaaaaaaaababaaba']\n",
-      "\n",
-      "Examples of matches for Regex 2:\n",
-      "[]\n",
-      "\n",
-      "Estimated frequency for Regex 1: 0.0020\n",
-      "Estimated frequency for Regex 2: 0.0000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "# Generate sequences that belong to the given regular expressions\n",
     "def generate_sequences(regex, num_sequences=10, min_length=3, max_length=60):\n",
     "    if regex == regex1:\n",
     "        base_patterns = [\"aba\", \"ba\", \"aaa\"]\n",
@@ -267,7 +206,6 @@
     "        sequences.append(sequence[:length])\n",
     "    return sequences\n",
     "\n",
-    "# Generate random sequences and inject examples\n",
     "def generate_random_file(filename, alphabet=\"abc\", num_sequences=1000, sequence_length=50, injected_sequences=[]):\n",
     "    with open(filename, \"w\") as file:\n",
     "        for _ in range(num_sequences - len(injected_sequences)):\n",
@@ -276,7 +214,7 @@
     "        for seq in injected_sequences:\n",
     "            file.write(seq + \"\\n\")\n",
     "\n",
-    "# Match regular expressions against the file\n",
+    "\n",
     "def match_nfa_against_file(regex, filename):\n",
     "    pattern = re.compile(regex)\n",
     "    matches = []\n",
@@ -287,31 +225,18 @@
     "                matches.append(sequence)\n",
     "    return matches\n",
     "\n",
-    "# Estimate frequency of matches\n",
     "def estimate_frequency(num_matches, total_sequences):\n",
     "    return num_matches / total_sequences\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nfa_to_dfa(nfa_transitions, start_state, accept_states, alphabet):\n",
-    "    \"\"\"\n",
-    "    Converts an NFA to a DFA using subset construction.\n",
-    "\n",
-    "    Parameters:\n",
-    "        nfa_transitions: Dict of NFA transitions {state: {symbol: [next_states]}}\n",
-    "        start_state: Initial state of the NFA\n",
-    "        accept_states: Set of accepting states in the NFA\n",
-    "        alphabet: List of input symbols\n",
-    "\n",
-    "    Returns:\n",
-    "        A tuple (dfa_transitions, dfa_start_state, dfa_accept_states)\n",
-    "    \"\"\"\n",
-    "    # Helper function: Compute epsilon-closure of a set of states\n",
+    "    \n",
     "    def epsilon_closure(states, nfa_transitions):\n",
     "        stack = list(states)\n",
     "        closure = set(states)\n",
@@ -325,7 +250,7 @@
     "                        stack.append(next_state)\n",
     "        return closure\n",
     "\n",
-    "    # DFA structures\n",
+    "    \n",
     "    dfa_transitions = {}\n",
     "    dfa_start_state = frozenset(epsilon_closure([start_state], nfa_transitions))\n",
     "    dfa_states = {dfa_start_state}\n",
@@ -336,18 +261,18 @@
     "        current_dfa_state = unmarked_states.pop()\n",
     "        dfa_transitions[current_dfa_state] = {}\n",
     "\n",
-    "        # Check if this DFA state is an accept state\n",
+    "        \n",
     "        if any(state in accept_states for state in current_dfa_state):\n",
     "            dfa_accept_states.add(current_dfa_state)\n",
     "\n",
-    "        # Compute transitions for each symbol in the alphabet\n",
+    "        \n",
     "        for symbol in alphabet:\n",
     "            next_states = set()\n",
     "            for nfa_state in current_dfa_state:\n",
     "                if nfa_state in nfa_transitions and symbol in nfa_transitions[nfa_state]:\n",
     "                    next_states.update(nfa_transitions[nfa_state][symbol])\n",
     "\n",
-    "            # Compute epsilon-closure of the reachable states\n",
+    "           \n",
     "            next_closure = frozenset(epsilon_closure(next_states, nfa_transitions))\n",
     "            if next_closure:\n",
     "                dfa_transitions[current_dfa_state][symbol] = next_closure\n",
@@ -360,32 +285,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.base import defaultdict\n",
+    "\n",
+    "\n",
     "def minimize_dfa(dfa_transitions, dfa_start_state, dfa_accept_states, alphabet):\n",
-    "    \"\"\"\n",
-    "    Minimizes a DFA.\n",
-    "\n",
-    "    Parameters:\n",
-    "        dfa_transitions: Dict of DFA transitions {state: {symbol: next_state}}\n",
-    "        dfa_start_state: Initial state of the DFA\n",
-    "        dfa_accept_states: Set of accepting states in the DFA\n",
-    "        alphabet: List of input symbols\n",
-    "\n",
-    "    Returns:\n",
-    "        A tuple (min_dfa_transitions, min_dfa_start_state, min_dfa_accept_states)\n",
-    "    \"\"\"\n",
-    "    # Partition states into accepting and non-accepting sets\n",
+    "    \n",
     "    all_states = set(dfa_transitions.keys())\n",
     "    partition = [dfa_accept_states, all_states - dfa_accept_states]\n",
     "\n",
-    "    # Refinement of partitions\n",
+    "    \n",
     "    while True:\n",
     "        new_partition = []\n",
     "        for group in partition:\n",
-    "            # Split group based on transitions\n",
+    "            \n",
     "            split = defaultdict(set)\n",
     "            for state in group:\n",
     "                transitions = tuple(\n",
@@ -399,10 +315,10 @@
     "            break\n",
     "        partition = new_partition\n",
     "\n",
-    "    # Map old states to new states\n",
+    "    \n",
     "    state_map = {state: i for i, group in enumerate(partition) for state in group}\n",
     "\n",
-    "    # Build the minimized DFA\n",
+    "    \n",
     "    min_dfa_transitions = {}\n",
     "    min_dfa_accept_states = set()\n",
     "    min_dfa_start_state = state_map[dfa_start_state]\n",
@@ -423,13 +339,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated sequences for Regex 1:\n",
+      "['abaaaababaabaababababaabaabaaaaabaaaaabababa', 'baab', 'aaaabababaaaaaaaaaab', 'baabaabaabaaaaababaabaabaaaa', 'aaa']\n",
+      "Generated sequences for Regex 2:\n",
+      "['ababaccccaabcbaccbbaabcbacccccbbaabbac', 'ababacccccbbabcbacccbbaabbacccccbbaabbaccccccbbabab', 'ababaccccaabcbacccccbbababacccbbabbacccca', 'abcbacccbbaababaccccaabcbacccaabcbaccaa', 'ababaccbbabcbacccc']\n",
+      "Random file 'random_sequences.txt' created with injected sequences.\n",
+      "\n",
+      "Matches for Regex 1: 3\n",
+      "Matches for Regex 2: 0\n",
+      "\n",
+      "Examples of matches for Regex 1:\n",
+      "['abaaaababaabaababababaabaabaaaaabaaaaabababa', 'baabaabaabaaaaababaabaabaaaa', 'aaa']\n",
+      "\n",
+      "Examples of matches for Regex 2:\n",
+      "[]\n",
+      "\n",
+      "Estimated frequency for Regex 1: 0.0030\n",
+      "Estimated frequency for Regex 2: 0.0000\n"
+     ]
+    }
+   ],
    "source": [
     "# Main program\n",
     "def main():\n",
-    "    # Generate sequences for each regex\n",
+    "\n",
     "    sequences1 = generate_sequences(regex1, num_sequences=5, min_length=3, max_length=50)\n",
     "    sequences2 = generate_sequences(regex2, num_sequences=5, min_length=10, max_length=60)\n",
     "    injected_sequences = sequences1 + sequences2\n",
